--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -18,3 +18,8 @@ VITE_APP_VERSION=1.0.0
 # Optional: Analytics or other service keys
 # VITE_GOOGLE_ANALYTICS_ID=your_ga_id_here
 # VITE_STRIPE_PUBLISHABLE_KEY=your_stripe_key_here
+
+# Google Maps API Configuration
+# Get your API key from: https://console.cloud.google.com/
+# See docs/setup/GOOGLE_MAPS_SETUP.md for setup instructions
+VITE_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
