--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,12 +28,14 @@
   "author": "Aman",
   "license": "MIT",
   "dependencies": {
+    "@react-google-maps/api": "^2.20.7",
     "@supabase/supabase-js": "^2.38.0",
+    "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
-    "lucide-react": "^0.294.0",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "use-places-autocomplete": "^4.0.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.5",
@@ -60,4 +62,3 @@
     "vite": "^4.5.0"
   }
 }
-
